# tok2dok

./: .gitignore  README.md  alembic.ini  pyproject.toml  readme2.md  requirements.txt  reset.sh  test.sh
.github/workflows/: python-app.yml
alembic/versions/: 43df53338072_intial_migrations.py  498c5e1ec70d_fix_add_pdf_content_field.py  99e8cc75209d_fix_add_user_id_to_usagetracker.py  a0bc066f8a4e_setup_initial_migrations.py
src/: main.py
src/api/: auth.py  chat.py  deps.py  pdf.py
src/core/: config.py  limiter.py
src/db/: crud.py  database.py  models.py
src/schemas/: pdf.py
src/services/: vector_store.py
src/utils/: middlewares.py  pdf_utils.py
tests/: __init__.py  pdf_test.py
