[tool.poetry]
name = "tok2dok"
version = "0.1.0"
description = "Talk to Your Docs"
authors = ["Backend Builder <sandeep@codesis.tech>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.115.12"
uvicorn = "0.34.1"
langchain = "0.3.23"
qdrant-client = "1.13.3"
python-multipart = "0.0.20"
openai = "1.75.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.16"
aiosignal = "1.3.2"
alembic = "1.15.2"
annotated-types = "0.7.0"
anyio = "4.9.0"
attrs = "25.3.0"
cachecontrol = "0.14.2"
cachetools = "5.5.2"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
colorama = "0.4.6"
cryptography = "44.0.2"
dataclasses-json = "0.6.7"
distro = "1.9.0"
dnspython = "2.7.0"
email-validator = "2.2.0"
fastapi-cli = "0.0.7"
firebase-admin = "6.7.0"
frozenlist = "1.5.0"
google-api-python-client = "2.167.0"
google-auth = "2.39.0"
google-auth-httplib2 = "0.2.0"
google-cloud-core = "2.4.3"
google-cloud-firestore = "2.20.2"
google-cloud-storage = "3.1.0"
google-crc32c = "1.7.1"
google-resumable-media = "2.7.2"
greenlet = "3.2.0"
h11 = "0.14.0"
h2 = "4.2.0"
hpack = "4.1.0"
httpcore = "1.0.8"
httplib2 = "0.22.0"
httptools = "0.6.4"
httpx = "0.28.1"
httpx-sse = "0.4.0"
hyperframe = "6.1.0"
idna = "3.10"
jinja2 = "3.1.6"
jiter = "0.9.0"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain-community = "0.3.21"
langchain-core = "0.3.53"
langchain-text-splitters = "0.3.8"
langchainhub = "0.1.21"
langsmith = "0.3.32"
mako = "1.3.10"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.26.1"
mdurl = "0.1.2"
msgpack = "1.1.0"
multidict = "6.4.3"
mypy-extensions = "1.0.0"
numpy = "2.2.4"
orjson = "3.10.16"
packaging = "24.2"
pgvector = "0.4.0"
portalocker = "2.10.1"
propcache = "0.3.1"
proto-plus = "1.26.1"
psycopg2-binary = "2.9.10"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pycparser = "2.22"
pydantic = "2.11.3"
pydantic-settings = "2.8.1"
pydantic-core = "2.33.1"
pygments = "2.19.1"
pyjwt = "2.10.1"
pymupdf = "1.25.5"
pyparsing = "3.2.3"
pypdf2 = "3.0.1"
python-dotenv = "1.1.0"
pyyaml = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "14.0.0"
rich-toolkit = "0.14.1"
rsa = "4.9.1"
setuptools = "78.1.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.40"
starlette = "0.46.2"
tenacity = "9.1.2"
tiktoken = "0.9.0"
tqdm = "4.67.1"
typer = "0.15.2"
types-requests = "2.32.0.20250328"
typing-inspect = "0.9.0"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
uritemplate = "4.1.1"
urllib3 = "2.4.0"
watchfiles = "1.0.5"
websockets = "15.0.1"
yarl = "1.20.0"
zstandard = "0.23.0"
protobuf = "5.26.1"
google-api-core = "2.24.2"
grpcio-status = "1.62.0"
grpcio-tools = "1.71.0"
langchain-openai = "^0.3.14"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port=8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
